# glot

./: .gitignore  README.md  docker-compose.yml
.agent/rules/: commits.md  python-env.md
backend/: .env.example  README.md  pyproject.toml  verify_db.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  cards.py  decks.py  settings.py
backend/app/core/: __init__.py  logging.py
backend/app/db/: __init__.py
backend/app/models/: __init__.py  card.py  deck.py  review_log.py  settings.py
backend/app/schemas/: __init__.py  card.py  deck.py  settings.py
backend/app/services/: __init__.py  fsrs_service.py
backend/bruno-collections/glot-api/: Health Check.bru  bruno.json
backend/bruno-collections/glot-api/Cards/: Create Card.bru  Get Card.bru  Get Due Cards.bru  List All Cards.bru  Preview Intervals.bru  Review Card - Good.bru  Update Card.bru
backend/bruno-collections/glot-api/Decks/: Create Deck.bru  List Decks.bru
backend/bruno-collections/glot-api/Settings/: Get Settings.bru  Update Settings.bru
backend/bruno-collections/glot-api/environments/: local.bru
backend/docs/: adminer-ui.md  api-testing.md  database-setup.md  fsrs-service.md  logging.md
